--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	],
 	"main": "./dist/index.umd.cjs",
 	"module": "./dist/index.js",
-	"types": "./index.d.ts",
+	"types": "./dist/index.d.ts",
 	"exports": {
 		"types": "./dist/index.d.ts",
 		"import": "./dist/index.js",
