--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
 		"skipLibCheck": true,
 		"allowJs": true,
 
+		"emitDeclarationOnly": true,
+		// "emitDeclarationOnly": false,
+		// "outDir": "./dist",
+		// "rootDir": "./src",
+
 		/* Bundler mode */
 		"moduleResolution": "Bundler",
 		"resolveJsonModule": true,
@@ -14,8 +19,8 @@
 
 		/* Declaration */
 		"declaration": true,
+		"declarationMap": true,
 		"declarationDir": "./dist",
-		"emitDeclarationOnly": true,
 
 		/* Linting */
 		"strict": true,
